--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,9 +40,8 @@ jobs:
           haxelib install hxjsonast
           haxelib install flixel-addons
           haxelib git faxe https://github.com/uhrobots/faxe
-          haxelib git polymod
-https://github.com/MasterEric/polymod.git
-         haxelib git tentools https://github.com/TentaRJ/tentools.git
+          haxelib git polymod https://github.com/MasterEric/polymod.git
+          haxelib git tentools https://github.com/TentaRJ/tentools.git
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib git extension-webm https://github.com/KadeDev/extension-webm
           haxelib run lime rebuild extension-webm windows
